# qt-mvc-uifactory-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/controller/: CoreController.cpp  CoreController.h
src/delegate/: AbstractDelegate.cpp  AbstractDelegate.hpp  ButtonDelegate.cpp  ButtonDelegate.h  LabelDelegate.cpp  LabelDelegate.h
src/model/: ConfigModel.cpp  ConfigModel.h
src/ui/: AbstractCommand.cpp  AbstractCommand.hpp  ButtonCommand.cpp  ButtonCommand.h  LabelCommand.cpp  LabelCommand.h  UIFactory.cpp  UIFactory.hpp
src/view/: MainWindow.cpp  MainWindow.h
